// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`web-search-tool parity (FILE-SPLIT-11) > behavior matrix: representative inputs > __testing: __clearSearchCache hook returns void 1`] = `
"{
  "after": "function",
  "before": "function"
}"
`;

exports[`web-search-tool parity (FILE-SPLIT-11) > behavior matrix: representative inputs > __testing: buildProviderChain dedupes and orders correctly 1`] = `
"[
  [
    "brave"
  ],
  [
    "brave"
  ],
  [
    "brave",
    "tavily"
  ],
  [
    "brave",
    "tavily"
  ],
  [
    "duckduckgo"
  ]
]"
`;

exports[`web-search-tool parity (FILE-SPLIT-11) > behavior matrix: representative inputs > __testing: capSearchResults respects budget and never truncates mid-result 1`] = `
"{
  "budget_one": {
    "droppedCount": 2,
    "results": [
      {
        "description": "AAA",
        "title": "A",
        "url": "https://a.test"
      }
    ],
    "totalCharsBudget": 1,
    "totalResults": 3
  },
  "budget_tight": {
    "droppedCount": 2,
    "results": [
      {
        "description": "AAA",
        "title": "A",
        "url": "https://a.test"
      }
    ],
    "totalCharsBudget": 30,
    "totalResults": 3
  },
  "budget_unlimited": {
    "droppedCount": 0,
    "results": [
      {
        "description": "AAA",
        "title": "A",
        "url": "https://a.test"
      },
      {
        "description": "BBB",
        "title": "B",
        "url": "https://b.test"
      },
      {
        "description": "CCC",
        "title": "C",
        "url": "https://c.test"
      }
    ],
    "totalCharsBudget": 1000000,
    "totalResults": 3
  },
  "empty": {
    "droppedCount": 0,
    "results": [],
    "totalCharsBudget": 1000000,
    "totalResults": 0
  }
}"
`;

exports[`web-search-tool parity (FILE-SPLIT-11) > behavior matrix: representative inputs > __testing: mapFreshnessToProvider maps shortcuts per provider 1`] = `
"{
  "brave_pd": {
    "freshness": "pd"
  },
  "brave_pw": {
    "freshness": "pw"
  },
  "ddg_pm": {
    "df": "m"
  },
  "ddg_py": {
    "df": "y"
  },
  "grok_pw": {},
  "jina_pm": {},
  "perplexity_pd": {},
  "searxng_pd": {
    "time_range": "day"
  },
  "searxng_pm": {
    "time_range": "month"
  },
  "searxng_pw": {
    "time_range": "week"
  },
  "searxng_py": {
    "time_range": "year"
  },
  "tavily_pd": {
    "days": 1
  },
  "tavily_py": {
    "days": 365
  }
}"
`;

exports[`web-search-tool parity (FILE-SPLIT-11) > behavior matrix: representative inputs > __testing: parseProvider normalizes provider aliases 1`] = `
"[
  "brave",
  "brave",
  "perplexity",
  "grok",
  "duckduckgo",
  "duckduckgo",
  "searxng",
  "tavily",
  "exa",
  "jina",
  null,
  null,
  null
]"
`;

exports[`web-search-tool parity (FILE-SPLIT-11) > behavior matrix: representative inputs > createWebSearchTool: factory accepts brave provider config 1`] = `
"{
  "keys": [
    "description",
    "execute",
    "label",
    "name",
    "parameters"
  ],
  "label": "Web Search",
  "name": "web_search"
}"
`;

exports[`web-search-tool parity (FILE-SPLIT-11) > behavior matrix: representative inputs > createWebSearchTool: factory accepts tavily provider config 1`] = `
"{
  "keys": [
    "description",
    "execute",
    "label",
    "name",
    "parameters"
  ],
  "label": "Web Search",
  "name": "web_search"
}"
`;

exports[`web-search-tool parity (FILE-SPLIT-11) > behavior matrix: representative inputs > createWebSearchTool: factory returns object with execute method 1`] = `
"{
  "descriptionType": "string",
  "executeType": "function",
  "hasParameters": true,
  "keys": [
    "description",
    "execute",
    "label",
    "name",
    "parameters"
  ],
  "label": "Web Search",
  "name": "web_search"
}"
`;

exports[`web-search-tool parity (FILE-SPLIT-11) > public API surface > __testing: exports the expected helper names 1`] = `
"[
  "buildProviderChain",
  "capSearchResults",
  "deepFetchResults",
  "extractGrokContent",
  "mapFreshnessToProvider",
  "normalizeFreshness",
  "parseProvider",
  "resolvePerplexityBaseUrl",
  "resolvePerplexityRequestModel",
  "resolveProvider"
]"
`;

exports[`web-search-tool parity (FILE-SPLIT-11) > public API surface > exports the expected named symbols 1`] = `
"[
  "__clearSearchCache",
  "__testing",
  "createWebSearchTool"
]"
`;
